--- a/ConfigureDesktopDialog.ui
+++ b/ConfigureDesktopDialog.ui
@@ -7,12 +7,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>926</width>
-    <height>527</height>
+    <width>672</width>
+    <height>290</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Configure Wallpaper</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -40,64 +40,41 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="preview">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>400</width>
-         <height>300</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QGroupBox" name="groupBox">
-       <property name="title">
-        <string>Scale Mode</string>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QRadioButton" name="origSizeButton">
-          <property name="text">
-           <string>Or&amp;iginal Size</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="scaledIgnoreRatioButton">
-          <property name="text">
-           <string>Sca&amp;led Ignoring Aspect Ratio</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="scaledKeepRatioButton">
-          <property name="text">
-           <string>Scale&amp;d Keep Aspect Ratio</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="scaledKeepRatioClipButton">
-          <property name="text">
-           <string>Scaled Keep Aspec&amp;t Ratio and Clip</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Scale Mode</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QRadioButton" name="origSizeButton">
+        <property name="text">
+         <string>Or&amp;iginal Size</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="scaledIgnoreRatioButton">
+        <property name="text">
+         <string>Sca&amp;led Ignoring Aspect Ratio</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="scaledKeepRatioButton">
+        <property name="text">
+         <string>Scale&amp;d Keep Aspect Ratio</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="scaledKeepRatioClipButton">
+        <property name="text">
+         <string>Scaled Keep Aspec&amp;t Ratio and Clip</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
