Lots of new stuff; DiskUsageApplet; Download Wallpapers
A new DiskUsage applet was added.
In the desktop configuration one now sees the available wallpapers
already on the system and can download new images via store.kde.org
The tiemout for a new notification is now adjusted by the contents
(more words, more to read, longer timeout)

--- a/ConfigureDesktopDialog.ui
+++ b/ConfigureDesktopDialog.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>672</width>
-    <height>290</height>
+    <width>741</width>
+    <height>580</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,6 +38,28 @@
       <widget class="KUrlRequester" name="kurlrequester"/>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QListWidget" name="iconView">
+     <property name="movement">
+      <enum>QListView::Static</enum>
+     </property>
+     <property name="flow">
+      <enum>QListView::LeftToRight</enum>
+     </property>
+     <property name="resizeMode">
+      <enum>QListView::Adjust</enum>
+     </property>
+     <property name="spacing">
+      <number>10</number>
+     </property>
+     <property name="viewMode">
+      <enum>QListView::IconMode</enum>
+     </property>
+     <property name="uniformItemSizes">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
@@ -90,14 +112,14 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KUrlRequester</class>
-   <extends>QWidget</extends>
-   <header>kurlrequester.h</header>
-  </customwidget>
-  <customwidget>
    <class>KColorCombo</class>
    <extends>QComboBox</extends>
    <header>kcolorcombo.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KUrlRequester</class>
+   <extends>QWidget</extends>
+   <header>kurlrequester.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
