use smallest height for panel to make stylesheet work
When setting min-height and max-height for the panel in
the stylesheet, the size is changed, not the sizeHint.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,11 @@
 /* some examples ...
 
+DesktopPanel
+{
+  min-height: 65px;
+  max-height: 65px;
+}
+
 ClockWidget QLabel#time
 {
   font-size: 26px;
