--- a/DiskUsageAppletConfigureDialog.ui
+++ b/DiskUsageAppletConfigureDialog.ui
@@ -6,15 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>462</width>
-    <height>101</height>
+    <width>477</width>
+    <height>177</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="2">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Text</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -31,10 +38,17 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_4">
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_6">
      <property name="text">
-      <string>Text</string>
+      <string>Bar Text</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="KColorButton" name="textColor">
+     <property name="alphaChannelEnabled">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -45,8 +59,22 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="KColorButton" name="textColor">
+   <item row="2" column="1" colspan="2">
+    <widget class="KColorButton" name="barTextColor">
+     <property name="alphaChannelEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>Bar Background</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="2">
+    <widget class="KColorButton" name="barBackgroundColor">
      <property name="alphaChannelEnabled">
       <bool>true</bool>
      </property>
